--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 minifb = "0.27.0"
 rusttype = "0.9.3"
 image = "0.25.2"
-nalgebra = "0.29"
+nalgebra = "0.33.0"
 nalgebra-glm = "0.19"
+rayon = "1.5"
